default.css: fix off-screen dialog positioning
Change dialog positioning to 'fixed' for consistent visibility within
the viewport, addressing previous issues with off-screen placement.

--- a/website/agenda/planung/css/default.css
+++ b/website/agenda/planung/css/default.css
@@ -710,7 +710,7 @@ ul.tabContainer li:last-child{
 }
 
 #content #dialog{
-    position:absolute;
+    position:fixed;
     z-index:1000;
     left: 0;
     right: 0;
